# mcp-auth-scratch

./: Dockerfile  README.md  pyproject.toml
